<resources>
    <string name="app_name">MovieCaatalog</string>
    <string name="judul_film">Judul Film</string>
    <string name="ini_genre">Ini genre</string>
    <string name="judul_detail">Judul Detail</string>
    <string name="genre">Genre</string>
    <string name="featured_crew">Featured Crew</string>
    <string name="language">Language</string>
    <string name="runtime">Runtime</string>
    <string name="overview_ksadjadskldjsadsalkjdslkjdasklasdjdaskldsajlkdsalkjdjasdsdaldasjas">Overview..............ksadjadskldjsadsalkjdslkjdasklasdjdaskldsajlkdsalkjdjasdsdaldasjas</string>
    <string-array name="data_judul">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Deadpool</item>
        <item>How To Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Marry Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pesiun</item>
        <item>Robin Hood</item>
        <item>Spider-man: Into The Sipeder Verse</item>
        <item>The Girl In The Spider Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_genre">
        <item>Drama, Romance, Music</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Thriller, Drama</item>
        <item>Drama, Music</item>
        <item>Adventure, Action, Sci-Fi</item>
        <item>Drama</item>
        <item>Animation, Adventure, Family</item>
        <item>Adventure, Action, Fantasy, Animation, Comedy, Sci-Fi</item>
        <item>Thriller, Drama, Sci-Fi</item>
        <item>Action, Thriller</item>
        <item>Fantasy, Family, Comedy</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Adventure, Fantasy</item>
        <item>Comedy, Drama</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Crime, Thriller</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Crime, Drama, Thriller</item>
        <item>Adventure, Action, Fantasy</item>
    </string-array>
    <string-array name="data_overview">
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.
        </item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half human, half Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.
        </item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family past, Adonis Creed is up against the challenge of his life.</item>
        <item>Deadpool tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool. Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life.
        </item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called Broly who theyve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so whats this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza back from Hell getting caught up in the mix.
        </item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>In Depression era London, a now grown Jane and Michael Banks, along with Michael s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.
        </item>
        <item>Preman Pensiun adalah film Indonesia tahun 2019 yang diadaptasi dari sebuah sinetron berjudul sama yang pernah tayang di stasiun televisi RCTI. Film ini disutradarai oleh Aris Nugraha yang juga sebagai penulis skenario dan akan diputar perdana pada 17 Januari 2019.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he’s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="data_crew">
        <item>Bradley Cooper, Will Fetters, Eric Roth, Robert Carson, William A. Wellman</item>
        <item>James Wan, Will Beall, Paul Norris, Mort Weisinger, David Leslie Johnson, Geoff Johns</item>
        <item>Joe Russo, Anthony Russo, Stephen McFeely, Christoper Markus</item>
        <item>Susanne Bier, Josh Malerman, Eric Heisserer</item>
        <item>Anthony McCarten, Bryan Singer, Dexter Fletcher, Peter Morgan</item>
        <item>Christina Hodson, Travis Knights</item>
        <item>Sylvester Stallone, Steven Caple Jr., Juel Taylor, </item>
        <item>Fabian Nicieza, Rob Liefeld, Tim Miller</item>
        <item>Dean DeBlois, Cressida Cowell</item>
        <item>Akira Toriyama, Tatsuya Nagamine</item>
        <item>M. Night Shyamalan</item>
        <item>Donovan Marsh, Don Keith, George Wallace</item>
        <item>Rob Marshall, David Magee, P.L. Travers</item>
        <item>Christian Rivers, Philip Reeve, Philippa Boyens</item>
        <item>Aris Nugraha</item>
        <item>Ben Chandler, Otto Bathurst, David James Kelly</item>
        <item>Rodney Rothman, Phil Lord, Steve Ditko</item>
        <item>Fede Alvarez, Stieg Larsson, David Lagercrantz</item>
        <item>Clint Eastwood, Nick Schenk</item>
        <item>Mike Zeck, David Michelinie, Todd McFarlane</item>
    </string-array>
    <string-array name="data_language">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Indonesia</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="data_runtime">
        <item>2h 15m</item>
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>1h 48m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
        <item>2h 11m</item>
        <item>2h 9m</item>
        <item>1h 34m</item>
        <item>1h 56m</item>
        <item>1h 57m</item>
        <item>1h 57m</item>
        <item>1h 57m</item>
        <item>1h 52m</item>
    </string-array>
</resources>