<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:padding="16dp">


    <ImageView
        android:id="@+id/detail_cover"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/judul_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_detail"
        android:layout_toEndOf="@id/detail_cover"
        android:layout_toRightOf="@id/detail_cover"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/detail_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_below="@id/judul_detail"
        android:layout_toRightOf="@id/detail_cover"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:text="@string/genre"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/detail_cover" />
    <TextView
        android:id="@+id/detail_crew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_below="@id/detail_genre"
        android:layout_toRightOf="@id/detail_cover"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:text="@string/featured_crew"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/detail_cover" />

    <TextView
        android:id="@+id/detail_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_below="@id/detail_crew"
        android:layout_toRightOf="@id/detail_cover"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:text="@string/language"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/detail_cover" />

    <TextView
        android:id="@+id/detail_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_below="@id/detail_language"
        android:layout_toRightOf="@id/detail_cover"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:text="@string/runtime"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/detail_cover" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:layout_below="@id/detail_cover"
        android:text="@string/overview_ksadjadskldjsadsalkjdslkjdasklasdjdaskldsajlkdsalkjdjasdsdaldasjas"/>
</RelativeLayout>